# roundup-action

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .zenodo.json  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  action.yaml  buildout.cfg  roundup-action.sublime-project  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  secrets-detection.yaml
scripts/: detect_secrets_baseline.sh
src/pds/: __init__.py
src/pds/roundup/: __init__.py  _detectives.py  _maven.py  _nodejs.py  _python.py  assembly.py  context.py  errors.py  main.py  step.py  util.py
support/: run-roundup.sh
templates/: github_changelog_generator
test/prototypes/maven/: README.md  pom.xml
test/prototypes/maven/src/main/java/gov/: package-info.java
test/prototypes/maven/src/main/java/gov/nasa/: package-info.java
test/prototypes/maven/src/main/java/gov/nasa/pds/: Main.java  package-info.java
test/prototypes/maven/src/site/: site.xml
test/prototypes/maven/src/site/xdoc/: index.xml
test/prototypes/maven/src/test/java/gov/nasa/pds/: MainTest.java
test/prototypes/python/: README.md  setup.cfg  setup.py
test/prototypes/python/docs/source/: conf.py  index.rst
test/prototypes/python/src/pds/: __init__.py
test/prototypes/python/src/pds/prototype/: __init__.py
