[metadata]
name = pds.roundup
version = attr: pds.roundup.VERSION
description = PDS Roundup: standard GitHub Action to support continuous delivery for the Planetary Data System
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
keywords = ci/cd continuous integration delivery github action pds planet planetary
license = ALv2
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Framework :: Buildout
    Framework :: Zope
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development


[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src

# Note: the ``install_requires`` dependencies below must match certain
# packages "baked into" the nasapds/github-actions-base which is used
# by GitHub Actions to save time on spinning up the Roundup's container.

install_requires =
    github3.py==1.3.0
    requests==2.23.0
    packaging==21.0
    sphinx==3.2.1
    twine==3.4.2
    wheel==0.40.0
    lxml==4.6.3
    sphinx-substitution-extensions==2020.9.30.0


[options.package_data]
* = *.txt, *.rst, *.md


[options.packages.find]
where = src
exclude = test


[options.data_files]


[options.entry_points]
console_scripts =
    roundup = pds.roundup.main:main
