[metadata]
name = pds.roundup
version = attr: pds.roundup.VERSION
description = PDS Roundup: standard GitHub Action to support continuous delivery for the Planetary Data System
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
keywords = ci/cd continuous integration delivery github action pds planet planetary
license = ALv2
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Framework :: Buildout
    Framework :: Zope
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development


[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src

# Note: the ``install_requires`` dependencies below are for development only;
# for operations, the base Docker image has all of these pre-installed to
# save time.

install_requires =
# later versions of alabaster require sphinx>=3.4
    alabaster <=0.7.13
    github3.py
    pds-github-util
    requests==2.23.0
    packaging==21.0
    sphinx~=3.2.1
    sphinx-rtd-theme~=0.5.0

# unclear why the following pins are necessary, but without them, versions dependent on sphinx>=5.0 are installed
    sphinxcontrib-applehelp==1.0.4
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.1
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    
    twine
    wheel
    lxml


[options.package_data]
* = *.txt, *.rst, *.md


[options.packages.find]
where = src
exclude = test


[options.data_files]


[options.entry_points]
console_scripts =
    roundup = pds.roundup.main:main
