[metadata]
name = pds.roundup
version = attr: pds.roundup.VERSION
description = PDS Roundup: standard GitHub Action to support continuous delivery for the Planetary Data System
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
keywords = ci/cd continuous integration delivery github action pds planet planetary
license = ALv2
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Framework :: Buildout
    Framework :: Zope
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development


[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src

# Note: the ``install_requires`` dependencies below without a version specification are
# those that come from nasapds/github-actions-base which are "baked into" the image in order
# to save time spinning up the Roundup's container.

install_requires =
    alabaster<=0.7.13
    github3.py
    lxml
    packaging
    requests
    wheel


[options.package_data]
* = *.txt, *.rst, *.md


[options.packages.find]
where = src
exclude = test


[options.data_files]


[options.entry_points]
console_scripts =
    roundup = pds.roundup.main:main
