[metadata]
name = pds.prototype
version = 1.0.0
description = A prototypical Python project
long_description = file: README.md

[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =


[options.package_data]
* = *.txt, *.rst


[options.packages.find]
where = src
exclude = test
